--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "chalk": "^4.1.0",
+    "chokidar": "^3.4.3",
     "fs-extra": "^9.0.1",
     "graceful-fs": "^4.2.4",
     "inquirer": "^7.3.3",
-    "nodemon": "^2.0.6",
+    "lodash.debounce": "^4.0.8",
     "tslib": "^1"
   },
   "devDependencies": {
@@ -23,7 +24,7 @@
     "@types/fs-extra": "^9.0.4",
     "@types/graceful-fs": "^4.1.4",
     "@types/inquirer": "^7.3.1",
-    "@types/node": "^14.14.10",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/nodemon": "^1.19.0",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
