--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
+    "@oclif/plugin-warn-if-update-available": "^1.7.0",
     "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
     "lodash.debounce": "^4.0.8",
+    "npm-check-updates": "^10.2.5",
     "ts-node": "^9.0.0",
     "tslib": "^1"
   },
@@ -30,7 +32,7 @@
     "eslint-config-oclif-typescript": "^0.1",
     "globby": "^10",
     "rimraf": "^3.0.2",
-    "typescript": "^3.3"
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -51,8 +53,13 @@
     "commands": "./lib/commands",
     "bin": "sand",
     "plugins": [
-      "@oclif/plugin-help"
-    ]
+      "@oclif/plugin-help",
+      "@oclif/plugin-warn-if-update-available"
+    ],
+    "warn-if-update-available": {
+      "timeoutInDays": 7,
+      "message": "<%= chalk.rgb(229,193,0)(config.name) %> has a new update available: <%= chalk.greenBright(latest) %> (current version: <%= chalk.greenBright(config.version) %>).\nUpdate with <%= chalk.grayBright('npm run update') %> or <%= chalk.grayBright('yarn update') %>."
+    }
   },
   "repository": "TheMrZZ/sandstone-cli",
   "scripts": {
