--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sandstone-cli",
   "description": "The CLI for Sandstone - the data pack creation library.",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "author": "Florian ERNST @TheMrZZ",
   "bin": {
     "sand": "./bin/run"
@@ -12,14 +12,15 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "@oclif/plugin-warn-if-update-available": "^1.7.0",
+    "@types/semver": "^7.3.4",
     "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
     "lodash.debounce": "^4.0.8",
-    "npm-check-updates": "^10.2.5",
-    "ts-node": "^9.0.0",
-    "tslib": "^1"
+    "pretty-error": "^2.1.2",
+    "semver": "^7.3.4",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
