--- a/src/template/tsconfig.json
+++ b/src/template/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "importHelpers": true,
     "module": "commonjs",
     "moduleResolution": "node",
     // We target a minimum Node version of 14: https://stackoverflow.com/a/59787575
@@ -11,7 +10,8 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "noEmit": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "build"
   },
   "include": [
     "src"
