Fixed npm update not working when an error is thrown

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,7 @@
       "error",
       {
         "multiline": true,
-        "consistent": true,
+        "consistent": true
       }
     ],
     "object-property-newline": [
