--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sandstone-cli",
   "description": "The CLI for Sandstone - the data pack creation library.",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "author": "TheMrZZ - Florian ERNST",
   "bin": {
     "sand": "./bin/run"
@@ -18,6 +18,7 @@
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
     "lodash.debounce": "^4.0.8",
+    "nanoid": "^3.1.20",
     "pretty-error": "^2.1.2",
     "semver": "^7.3.4",
     "ts-node": "^9.0.0"
