--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "target": "es2020",
+    "target": "es2019",
+    "lib": ["es2020"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
