--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sandstone-cli",
   "description": "The CLI for Sandstone - the data pack creation library.",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "TheMrZZ - Florian ERNST",
   "bin": {
     "sand": "./bin/run"
@@ -17,9 +17,12 @@
     "chokidar": "^3.4.3",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
+    "klaw": "^3.0.0",
     "lodash.debounce": "^4.0.8",
+    "minecraft-protocol": "^1.24.2",
     "nanoid": "^3.1.20",
     "pretty-error": "^2.1.2",
+    "remove": "^0.1.5",
     "semver": "^7.3.4",
     "ts-node": "^9.0.0"
   },
@@ -27,6 +30,7 @@
     "@oclif/dev-cli": "^1",
     "@types/fs-extra": "^9.0.4",
     "@types/inquirer": "^7.3.1",
+    "@types/klaw": "^3.0.1",
     "@types/lodash.debounce": "^4.0.6",
     "@types/nodemon": "^1.19.0",
     "eslint": "^5.13",
