--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
       - name: Cache npm modules
         uses: actions/cache@v2.1.1
         with:
@@ -23,7 +23,7 @@ jobs:
           # An explicit key for restoring and saving the cache
           key: ${{ runner.os }}-npm-modules
       - name: Install dependencies
-        run: yarn
+        run: npm ci
     
   publish-npm:
     needs: build
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
           registry-url: https://registry.npmjs.org/
       - name: Cache npm modules
         uses: actions/cache@v2.1.1
@@ -41,11 +41,11 @@ jobs:
           path: node_modules
           # An explicit key for restoring and saving the cache
           key: ${{ runner.os }}-npm-modules
-      - run: yarn
+      - run: npm ci
       - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ./.npmrc
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
-      - run: yarn prepack
+      - run: npm run prepack
       - run: npm publish
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
