--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,51 +1,25 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
-name: Node.js Package
+name: Node.js Publish
 
 on:
   release:
     types: [created]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: 16
-      - name: Cache npm modules
-        uses: actions/cache@v2.1.1
-        with:
-          # A list of files, directories, and wildcard patterns to cache and restore
-          path: node_modules
-          # An explicit key for restoring and saving the cache
-          key: ${{ runner.os }}-npm-modules
-      - name: Install dependencies
-        run: npm ci
-    
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
-      - name: Cache npm modules
-        uses: actions/cache@v2.1.1
-        with:
-          # A list of files, directories, and wildcard patterns to cache and restore
-          path: node_modules
-          # An explicit key for restoring and saving the cache
-          key: ${{ runner.os }}-npm-modules
-      - run: npm ci
+      - run: npm install -f
+      - run: npm install @types/node
+      - run: npm run build
       - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ./.npmrc
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
-      - run: npm run prepack
-      - run: npm publish
+      - run: npm run prepack && npm publish
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
