--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "inquirer": "^7.3.3",
     "klaw": "^3.0.0",
     "lodash.debounce": "^4.0.8",
+    "madge": "^5.0.1",
     "minecraft-protocol": "^1.24.2",
     "nanoid": "^3.1.20",
     "pretty-error": "^2.1.2",
@@ -32,6 +33,7 @@
     "@types/inquirer": "^7.3.1",
     "@types/klaw": "^3.0.1",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/madge": "^5.0.0",
     "@types/nodemon": "^1.19.0",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
