--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/lodash.debounce": "^4.0.6",
     "@types/madge": "^5.0.0",
     "@types/nodemon": "^1.19.0",
+    "chokidar-cli": "^3.0.0",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
@@ -81,6 +82,7 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "npm run build",
     "build": "rimraf lib && tsc -b && node ./copyTemplate.js && oclif-dev manifest && oclif-dev readme",
+    "watch": "npm run build && chokidar \"src/**/*\" -c \"npm run build\"",
     "test": "echo NO TESTS",
     "version": "oclif-dev readme && git add README.md"
   },
