--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^3",
     "@oclif/plugin-warn-if-update-available": "^1.7.0",
+    "@types/adm-zip": "^0.5.0",
     "@types/semver": "^7.3.4",
+    "adm-zip": "^0.5.10",
     "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
     "fs-extra": "^9.0.1",
@@ -41,7 +43,7 @@
     "@oclif/dev-cli": "^1",
     "@types/fs-extra": "^9.0.4",
     "@types/inquirer": "^7.3.1",
-    "@types/klaw": "^3.0.1",
+    "@types/klaw": "^3.0.3",
     "@types/lodash.debounce": "^4.0.6",
     "@types/madge": "^5.0.0",
     "@types/nodemon": "^1.19.0",
