--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@oclif/plugin-help": "^3",
     "@oclif/plugin-warn-if-update-available": "^1.7.0",
     "@types/adm-zip": "^0.5.0",
+    "@types/delete-empty": "^3.0.2",
     "@types/semver": "^7.3.4",
     "adm-zip": "^0.5.10",
     "chalk": "^4.1.0",
     "chokidar": "^3.4.3",
+    "delete-empty": "^3.0.0",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
     "klaw": "^3.0.0",
