--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,6 @@ jobs:
       - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ./.npmrc
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
-      - run: npm run prepack && npm publish
+      - run: npm run build && npm publish
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
