--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sandstone-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The CLI for Sandstone - the minecraft pack creation library.",
   "type": "module",
   "exports": "./lib/index.js",
@@ -43,6 +43,7 @@
   "dependencies": {
     "adm-zip": "^0.5.10",
     "chalk": "^5.3.0",
+    "chalk-template": "^1.1.0",
     "chokidar": "^3.5.3",
     "commander": "^10.0.1",
     "delete-empty": "^3.0.0",
