--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "exports": "./lib/index.js",
   "bin": {
-    "sand": "./lib/index.js"
+    "sand": "./bin/run"
   },
   "scripts": {
     "test": "echo NO TESTS",
@@ -47,11 +47,13 @@
     "chokidar": "^3.5.3",
     "commander": "^10.0.1",
     "delete-empty": "^3.0.0",
+    "dotenv-cli": "^7.3.0",
     "figlet": "^1.6.0",
     "fs-extra": "^11.1.1",
     "inquirer": "^9.2.11",
     "klaw": "^4.1.0",
     "nanoid": "^4.0.2",
+    "node-fetch": "^3.3.2",
     "pretty-error": "^4.0.0",
     "semver": "^7.5.4",
     "ts-node": "^10.9.1"
