--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sandstone-cli",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "The CLI for Sandstone - the minecraft pack creation library.",
   "type": "module",
   "exports": "./lib/index.js",
   "bin": {
-    "sand": "./bin/run"
+    "sand": "./bin/run.cjs"
   },
   "scripts": {
     "test": "echo NO TESTS",
