--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "sandstone-cli",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "The CLI for Sandstone - the minecraft pack creation library.",
   "type": "module",
   "exports": "./lib/index.js",
   "bin": {
-    "sand": "./bin/run.cjs"
+    "sand": "./lib/index.js"
   },
   "scripts": {
     "test": "echo NO TESTS",
@@ -41,30 +41,21 @@
   },
   "homepage": "https://github.com/sandstone-mc/sandstone-cli#readme",
   "dependencies": {
-    "adm-zip": "^0.5.10",
     "chalk": "^5.3.0",
     "chalk-template": "^1.1.0",
     "chokidar": "^3.5.3",
     "commander": "^10.0.1",
-    "delete-empty": "^3.0.0",
-    "dotenv-cli": "^7.3.0",
     "figlet": "^1.6.0",
     "fs-extra": "^11.1.1",
     "inquirer": "^9.2.11",
-    "klaw": "^4.1.0",
     "nanoid": "^4.0.2",
     "node-fetch": "^3.3.2",
-    "pretty-error": "^4.0.0",
-    "semver": "^7.5.4",
-    "ts-node": "^10.9.1"
+    "semver": "^7.5.4"
   },
   "devDependencies": {
-    "@types/adm-zip": "^0.5.2",
-    "@types/delete-empty": "^3.0.2",
     "@types/figlet": "^1.5.6",
     "@types/fs-extra": "^11.0.2",
     "@types/inquirer": "^9.0.4",
-    "@types/klaw": "^3.0.4",
     "@types/semver": "^7.5.3",
     "typescript": "^5.2.2"
   }
