--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,3 +25,7 @@ jobs:
       - run: pnpm run build && npm publish
         env:
           NPM_TOKEN: ${{secrets.npm_token}}
+      - run: sed -i 's/sandstone-cli/create-sandstone/g' package.json
+      - run: npm publish
+        env:
+          NPM_TOKEN: ${{secrets.npm_token}}
