--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sandstone-cli",
-  "version": "1.1.11",
+  "version": "1.2.0",
   "description": "The CLI for Sandstone - the minecraft pack creation library.",
   "type": "module",
   "exports": "./lib/index.js",
   "bin": {
-    "sand": "./lib/index.js"
+    "sand": "./lib/index.js",
+    "create-sandstone": "./lib/create.js"
   },
   "scripts": {
     "test": "echo NO TESTS",
