--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "sandstone": "file:../sandstone"
+    "sandstone": "^1.0.0-beta.0"
   }
 }
