--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/figlet": "^1.5.6",
     "@types/fs-extra": "^11.0.2",
     "@types/semver": "^7.5.3",
+    "sandstone": "^1.0.0-beta.0",
     "typescript": "^5.2.2"
   }
 }
