🚧 More `watch work`

--- a/package.json
+++ b/package.json
@@ -43,22 +43,27 @@
   "dependencies": {
     "@inquirer/prompts": "^8.2.0",
     "@parcel/watcher": "^2.5.6",
+    "@types/chalk": "^2.2.4",
     "adm-zip": "^0.5.10",
-    "chalk": "^5.3.0",
+    "chalk": "^5.6.2",
     "chalk-template": "^1.1.0",
     "commander": "^10.0.1",
     "figlet": "^1.6.0",
     "fs-extra": "^11.1.1",
+    "ink": "^6.6.0",
+    "ink-spinner": "^5.0.0",
     "nanoid": "^4.0.2",
     "node-fetch": "^3.3.2",
+    "react": "^19.2.4",
     "semver": "^7.5.4"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.2",
     "@types/figlet": "^1.5.6",
     "@types/fs-extra": "^11.0.2",
+    "@types/react": "^19.2.10",
     "@types/semver": "^7.5.3",
-    "sandstone": "^1.0.0-beta.0",
+    "sandstone": "link:sandstone",
     "typescript": "^5.2.2"
   }
 }
