--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,14 @@
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "target": "es2019",
+    "target": "ES2024",
     "lib": [
-      "es2020"
+      "ES2024"
     ],
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react-jsx"
   },
   "include": [
     "src/**/*"
