--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@inquirer/prompts": "^8.2.0",
     "@parcel/watcher": "^2.5.6",
+    "@sandstone-mc/hot-hook": "link:@sandstone-mc/hot-hook",
     "@types/chalk": "^2.2.4",
     "adm-zip": "^0.5.10",
     "chalk": "^5.6.2",
