🐛 Fix `dry` build flag failing to prevent writes to the output

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "create-sandstone": "./lib/create.js"
   },
   "scripts": {
-    "build": "bun tsc"
+    "dev:build": "bun tsc"
   },
   "repository": {
     "type": "git",
